82. Improve MPRIS interface - fix CanPlay/CanPause status update, and use micro
    seconds for times.
83. Use EchoNest to retrieve artist information.
84. Add ability to specify extra options for sshfs.
85. Press F11 to make Cantata fullscreen.
86. If configured to use GNOME MediaKeys, then start dbus service if it is not
    already started.
87. Implement 'Stop after current track'
88. If cropping an artist image (because it is not square), always crop from
    the top. This is because if we have a portrait picture (where the height
    needs adjusting), then the artist's face is likely to be nearer the top
    than the middle.
89. Middle click volume button to mute/unmute.

0.9.2
-----
 1. (Qt-Only) Dont show clear button for read-only line-edits.
 2. Fix 'Locate In Library' when library is not set to tree mode.
 3. Use grid layout for transcoder slider, removes Qt layout warning.
 4. Simplified Chinese translation - thanks to 薛景
 5. Fix restoring of splitter sizes when we start minimized to system tray.
 6. Fix decoding of Cantata HTTP stream URLs.
 7. Work-around issue of non display of main window when using transparent
    QtCurve theme.
 8. Fix playing of some non-MP3 files external to MPD database via Cantata's
    simple HTTP server.
 9. Fix playing of files containing square brackets, etc, that are external
    to MPD database via Cantata's simple HTTP server.
10. Fix detection of some filetypes.
11. Prevent multiple KDE Cantata windows appearing if app is attempted to be
    started repeatedly in quick succession.
12. For streams, if we have a 'name' but no artist or album title, then just
    display the name (this is usually the Radio Station)
13. For a song to be 'empty', artist, album, title, and name need to be empty.
    This fixes detection of updates to the name field when playing streams.
14. Fix potential memory leak when stopping threads.
15. Only enable play queue save-as and clear buttons if there are items in the
    play queue!