@@ -140,11 +140,12 @@
 86. If configured to use GNOME MediaKeys, then start dbus service if it is not
     already started.
 87. Implement 'Stop after current track'
-88. If cropping an artist image (because it is not square), always crop from
+88. Add 'Stop after track' to playqueue context menu.
+89. If cropping an artist image (because it is not square), always crop from
     the top. This is because if we have a portrait picture (where the height
     needs adjusting), then the artist's face is likely to be nearer the top
     than the middle.
-89. Middle click volume button to mute/unmute.
+90. Middle click volume button to mute/unmute.
 
 0.9.2
 -----
